[tool.poetry]
name = "kronos"
version = "0.1.0"
homepage = "https://github.com/jinified/kronos"
repository = "https://github.com/jinified/kronos"
description = "A simple scheduler for graduate training programme"
authors = ["jinified <jinified@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
python-constraint = "^1.4"
numpy = "^1.16"
flake8 = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
tox = "^3.9"
coveralls = "^1.7"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
